# little-milestones

./: README.md  providers.example.json  pyproject.toml
.github/workflows/: tests.yml
docs/immich/: get-all-album.md  retrieve-asset.md  search-assets-metadata.md  update-album.md  update-assets.md
src/littlems/: __init__.py  cli.py  config.py  documents.py  exif.py  imaging.py  immich.py  models.py  report.py  scanner.py  service.py  vision.py
tests/: test_cli.py  test_exif.py  test_immich.py  test_report.py  test_scanner.py  test_service.py  test_vision.py
